Replace Java 9 deprecated calls with appropriate substitutes (#1840)